# xytable

./: README.md
MATLAB/: Calibracion_luz.fig  Calibracion_luz.m  Calibracion_motores.fig  Calibracion_motores.m  Image_composer.fig  Image_composer.m  Visualizador.fig  Visualizador.m  bajar_fila.m  build_matrix.m  calibracion.m  comenzar_comunicacion.m  configuracion_constantes.m  corregir_imagen.m  crear_imagenes_finales.m  eq_rgb.m  find_image.m  get_image.m  get_preview.m  informacion.m  lensdistort.m  match.m  mover_motor.m  simulador_control.m  stitch.m  stitch_filas.fig  stitch_filas.m  test_filas.m
XYTableController/: .ccsproject  .cproject  .project  UART.c  UART.h  main.c  main.h  timer.c  timer.h
XYTableController/.launches/: xyTable.launch
cameraControl/: CMakeLists.txt  cameraControl.cpp  cameraControl.h
